--- a/public/index.html
+++ b/public/index.html
@@ -22,11 +22,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 		<script src="https://github.com/WalletConnect/walletconnect-monorepo/releases/download/1.6.2/web3-provider.min.js"></script>
 		<title>React App</title>
 	</head>
 
-	<body>
+	<body style="margin: 0">
 		<noscript>
 			You need to enable JavaScript to run this app.
 		</noscript>
